mini-link-gateway/src/main/resources/deploy/service-gateway.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: mini-link-namespace
  labels:
    app: backend-label
spec:
  selector:
    app: backend-label
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
