mini-link-gateway/src/main/resources/deploy/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-link-ingress
  namespace: mini-link-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: minilink.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-link-frontend-service
                port:
                  number: 80
